Fixed overlapping music text

--- a/styling/accessibility.css
+++ b/styling/accessibility.css
@@ -195,6 +195,7 @@ input[type="range"]::-webkit-slider-thumb {
     font-size: 26px;
     color: black;
     text-align: center;
+    display: none;
     /* margin-bottom: 20px; */
 }
 
